# pi-orchlink

./: .gitignore  AGENTS.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
docs/: goal-mode-design.md  manual-smoke-test.md  orchlink-improvement-plan.md  prd.md
skills/: sync_orchlink_skills.py
skills/general/orchlink/: SKILL.md
skills/hermes/orchlink/: SKILL.md
skills/openclaw/orchlink/: SKILL.md
src/orchlink/: __init__.py  version.py
src/orchlink/bridge/: agent_runner.py  ask.py  listener.py  monitor.py  orchestrator_bridge.py  prompt_templates.py  worker_bridge.py
src/orchlink/broker/: checkpoint.py  dto.py  journal.py  main.py  protocol.py  response_models.py  route_adapter.py  service.py  settings.py  state.py  state_machine.py
src/orchlink/cli/: client.py  main.py  message_input.py  resume.py
src/orchlink/client/: __init__.py  ask.py  broker_client.py  messages.py  monitor.py  process.py  sync.py
src/orchlink/connector/: __init__.py  lead.py  pi_connector.py  pi_extension.py  pi_extension_pure.py  pi_extension_ui.py  pi_extension_worker.py  pi_extension_writer.py  worker.py
src/orchlink/core/: __init__.py  broker_metadata.py  envelope.py  models.py  (+5 more)
tests/: test_architecture.py  test_broker.py  test_checkpoint.py  test_cli.py  test_cli_no_live_fs_coupling.py  test_client_messages.py  test_contract.py  test_core.py  test_events.py  test_goal.py  test_goal_checks.py  test_goal_lifecycle.py  test_goal_runner.py  test_goal_worker_reply.py  test_journal.py  test_jsonl_persistence.py  test_lease.py  test_memory_store.py  test_orchlink_ui_extension.py  test_packaging.py  test_pi_connector.py  test_pi_extension_pure.py  test_project_init.py  test_protocol.py  test_request_reply.py  test_resume.py  test_route_adapter.py  test_runner_and_prompt.py  test_state.py  test_telemetry_contract.py  test_transcript_api.py  test_transcript_persistence.py  test_worker_bridge.py  test_worker_context_usage.py  test_worker_supervisor.py  test_worker_tool_count.py
tests/goal/: test_runner_dispatch.py
tests/loop/: test_cli.py  test_connectors.py  test_github_connector.py  test_item.py  test_linear_connector.py  test_loop_engine.py  test_loop_service.py  test_objective_check_service.py  test_runtime.py  test_secrets.py  test_state_repo.py  test_triage_service.py  test_verifier_service.py  test_worker_service.py  test_worktree.py  test_worktree_evidence.py  test_worktree_service.py
(+89 files in other folders)
