[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchlink"
version = "0.4.4"
description = "Local broker and launcher for independent coding agent sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "typer",
    "rich",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
orch = "orchlink.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"orchlink.project" = ["templates/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
